<resources>
    <string name="app_name">Parcial_grupo4</string>

    <string name="titulo">BIENVENIDOS A LA APP DE PARCIAL 1</string>
    <string name="menu">MENU PRINCIPAL</string>
    <string name="firma"> DERECHOS RESEVADOS AL GRUPO 4</string>
    <string name="integrantes">INTEGRANTES DEL GRUPO 4</string>
    <string name="integ">JOSE LUIS MUÑOZ PADILLA USIS043721</string>
    <string name="inte">RIGOBERTO ALEXANDER MEJIA SORTO USIS034921</string>
    <string name="integra">KATERIN ESTELA ORELLANA HERNANDEZ UJSIS035821</string>
    <string name="pdatos">PASAR DATOS</string>
    <string name="edatos">ENVIAR DATOS</string>
    <string name="tab">MENU TABS</string>
    <string name="acelerometro">ACELEROMETRO</string>
    <string name="sensor">SENSOR DE APROXIMIDAD</string>
    <string name="rvideo">REPRODUCTOR DE VIDEO</string>
    <string name="acerca_de">ACERCA DE</string>
    <string name="titulo2">¿ERES MAYOR O MENOR DE EDAD?</string>
    <string name="enviar">ENVIAR DATOS</string>
    <string name="anterior">PANATALLA ANTERIOR</string>
    <string name="nombre">ESCRIBA SU NOMBRE</string>
    <string name="edad">ESCRIBA SU EDAD</string>
    <string name="regresar">REGRESAR</string>
    <string name="app">APLICACION DE PARCIAL</string>
    <string name="version">VERSION DE APLICACION</string>
    <string name="nom">1.1.0</string>
    <string name="resumen">La app fue creada para la presentacion del parcial en la cual trabajamos con proyectos de semanas anteriores y los modificamos para que esten en una sola app,trabajando en equipo y utilizando los conocimientos adquiridos</string>
    <string name="jurgo1">MINECRAFT</string>
    <string name="juego2">CALL OF DUTY</string>
    <string name="juego3">FIVE NIGHTS AT FREDDYS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>